Configured Maven surefire for experiment running on Blub